# pi-launcher

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: SDL.c.61368F4BF19C5190.idx  SDL_RLEaccel.c.E7D1DF5F2059CD58.idx  SDL_RLEaccel_c.h.1A65A7673079D463.idx  SDL_assert.c.899A7E47975CDDDD.idx  SDL_assert_c.h.8FE412A6634F80C3.idx  SDL_atomic.c.57D710D62327CE83.idx  SDL_audio.c.D973ECB9D91D3CBD.idx  SDL_audio_c.h.A2F46DDFD847A120.idx  SDL_audio_channel_converters.h.D45D71E98AFE11AC.idx  SDL_audio_resampler_filter.h.F3E4F0663A96528C.idx  SDL_audiocvt.c.93959C6EFC417E33.idx  SDL_audiodev.c.C8B8D850A43310D7.idx  SDL_audiotypecvt.c.72E04BA864FCFCA0.idx  SDL_blendfillrect.c.54FB61B8C0AD6AED.idx  SDL_blendfillrect.h.B4BACAA5AF3F62E6.idx  SDL_blendline.c.EBA1A5A83908B14F.idx  SDL_blendline.h.828E7EEED49B4450.idx  SDL_blendpoint.c.FC116A50F7EB8BBB.idx  SDL_blendpoint.h.32B20701647566D3.idx  SDL_blit.c.0A05978928160423.idx  SDL_blit.h.EEAF0F71987F5648.idx  SDL_blit_0.c.2303907B91DA2019.idx  SDL_blit_1.c.801929383919026D.idx  SDL_blit_A.c.5FE1EEBBE887C2BC.idx  SDL_blit_N.c.72D3787C0D52939D.idx  SDL_blit_auto.c.5F41B10D2C46B72E.idx  SDL_blit_auto.h.7E5F4B5F5ACFF249.idx  SDL_blit_copy.c.B7E509475E56EA12.idx  SDL_blit_copy.h.C18E96CC5CC6E507.idx  SDL_blit_slow.c.1566AE85A41C8A75.idx  SDL_blit_slow.h.4958724936733568.idx  SDL_bmp.c.E15E989232F5056B.idx  SDL_clipboard.c.2EA67D90AF7A1985.idx  SDL_clipboardevents.c.609F2E86E38F11D5.idx  SDL_clipboardevents_c.h.672D341F762FD673.idx  SDL_cpuinfo.c.35889E7067DBCFE2.idx  SDL_crc16.c.E213827FF84C5BF0.idx  SDL_crc32.c.6250DFB423DC1A66.idx  SDL_d3dmath.c.0D039BA17E9D8F09.idx  SDL_d3dmath.h.B22D6574792490F5.idx  (+329 more)
src/: main.c  main.cpp
